--- a/GasificationCommerce.html
+++ b/GasificationCommerce.html
@@ -11,7 +11,7 @@
 <body>
 <!-----------------------bootstrap navbar---------------------------->
 <header>
-    <nav class="navbar navbar-expand-lg navbar-dark header">
+    <nav class="navbar navbar-expand-lg navbar-light header">
         <a class="navbar-brand" href="index.html">
             <img src="images/logo.png" alt="logo">
         </a>
@@ -26,14 +26,21 @@
                 <li class="nav-item">
                     <a href="cost.html">
                         <div></div>
-                        <div>КАЛЬКУЛЯТОР <br> СТОИМОСТИ</div>
+                        <div>КАЛЬКУЛЯТОР СТОИМОСТИ</div>
                     </a>
                     <div class="dropdown-divider"></div>
                 </li>
                 <li class="nav-item">
                     <a href="calculation.html">
                         <div></div>
-                        <div>РАСЧЕТЫ <br> ONLINE</div>
+                        <div>РАСЧЕТЫ ONLINE</div>
+                    </a>
+                    <div class="dropdown-divider"></div>
+                </li>
+                <li class="nav-item">
+                    <a href="news.html">
+                        <div></div>
+                        <div>НОВОСТИ</div>
                     </a>
                     <div class="dropdown-divider"></div>
                 </li>
@@ -59,7 +66,7 @@
         <!--кнопка Провести ГАЗ________________________________________________________________________-->
         <div class="form gasForm">
             <form action="#">
-                <button type="button" class="btnfos" text="btn btn-lg bg-danger" data-toggle="modal"
+                <button type="button" class="btnfos" data-toggle="modal"
                         data-target="#exampleModal" data-whatever="@getbootstrap">Провести ГАЗ
                 </button>
             </form>
@@ -105,7 +112,7 @@
         <ul class="navbar-nav flex-column contacts">
             <li>
                 <a href="tel:+78123333333">
-                    <div> +7 (812) 333-33-33</div>
+                    <div> +7&nbsp;(812)&nbsp;333-33-33</div>
                 </a>
                 <div class="dropdown-divider"></div>
             </li>
@@ -115,11 +122,11 @@
                 </a>
                 <div class="dropdown-divider"></div>
             </li>
-            <li>
-                <a href="contacts.html">
-                    <div class="contacts_text"> Санкт-Петербург, ул.<br>Гороховая, д. 33, оф. 15.</div>
-                </a>
-            </li>
+            <!--            <li>-->
+            <!--                <a href="contacts.html">-->
+            <!--                    <div class="contacts_text"> Санкт-Петербург, ул.<br>Гороховая, д. 33, оф. 15.</div>-->
+            <!--                </a>-->
+            <!--            </li>-->
         </ul>
     </nav>
 </header>
@@ -129,15 +136,29 @@
         <p class="">Проведем газ для промыщленных объектов</p>
         <!--cantral gasification-->
 Газификация магазина, торгового центра
-«Центр газификации» выполняет работы по газификации административно-торговых, а также складских комплексов. Мы выполним для Вас теплотехнический расчет зданий и помещений, на основании которого позднее будут утверждаться лимиты на получение объемов газа и выдаваться технические условия на подключение к местной газораспределительной сети и выбор точки врезки будущего газопровода.
+выполняет работы по газификации административно-торговых, а также складских комплексов.
+        Мы выполним для Вас теплотехнический расчет зданий и помещений, на основании которого позднее будут утверждаться лимиты
+        на получение объемов газа и выдаваться технические условия на подключение к местной газораспределительной сети и выбор точки врезки будущего газопровода.
 
-Рабочую документацию при выборе направления трассы к участку, где будет расположен будущий комплекс, мы готовим с учетом существующих и проектируемых коммуникаций и инженерных сооружений. Зачастую, первоначальный вариант подвода газопровода к зданию, место выбора для размещения проектируемого ГРПШ или ГРПБ довольно существенно отличается от финального. Нам приходится буквально вписываться в узкие допустимые «коридоры» для размещения будущего газопровода, т. к. плотность застройки торговых и административных комплексов высока.
+Рабочую документацию при выборе направления трассы к участку, где будет расположен будущий комплекс, мы готовим с учетом существующих и проектируемых коммуникаций и инженерных сооружений.
+        Зачастую, первоначальный вариант подвода газопровода к зданию, место выбора для размещения проектируемого ГРПШ или ГРПБ довольно существенно отличается от финального.
+        Нам приходится буквально вписываться в узкие допустимые «коридоры» для размещения будущего газопровода, т. к. плотность застройки торговых и административных комплексов высока.
 
 
-Ввиду того, что рабочая и исполнительная документация проектов по газификации, ход выполнения строительно-монтажных работ находятся под пристальным надзором различных служб, работу на некоторых участках газопровода заказчик просит провести в очень сжатые сроки — это требует высокого профессионализма от сотрудников газифицирующей компании. После согласования, утверждения и проведения экспертизы рабочего проекта мы приступаем к строительно-монтажным работам.
+Ввиду того, что рабочая и исполнительная документация проектов по газификации, ход выполнения строительно-монтажных работ находятся под пристальным надзором различных служб,
+        работу на некоторых участках газопровода заказчик просит провести в очень сжатые сроки — это требует высокого профессионализма от сотрудников газифицирующей компании.
+        После согласования, утверждения и проведения экспертизы рабочего проекта мы приступаем к строительно-монтажным работам.
 
-Даже при выполнении монтажа по качественному и профессионально исполненному рабочему проекту на нашем пути встречаются вновь проложенные коммуникации и инженерные сооружения, которые не были возведены или указаны на последней стадии проектирования. Поэтому в процессе выполнения монтажных работ все равно приходится вносить, повторно согласовывать и утверждать новые изменения. Это требует настоящего профессионализма и слаженности от сотрудников компании, занимающейся работами по газификации: проектировщиков, геодезистов, инженеров ПТО, прорабов, слесарей, газоэлектросварщиков.
-Наряду с выбором одного из вариантов размещения котельной: пристроенная, отдельностоящая, крышная, — мы предлагаем несколько решений вопроса отопления комплекса: водо-воздушное, газо-воздушное, инфракрасное, водяное или их комбинации. Мы предоставляем заказчику предварительный расчет первоначальных инвестиционных и последующих эксплуатационных расходов устанавливаемого оборудования: периодичность и стоимость технического обслуживания, расходных материалов, гарантийные сроки и ориентировочную продолжительность службы. Мы стараемся пояснить минусы и плюсы каждого из вариантов, не навязывая свое решение. Заказчик, на стадии выбора отопительного оборудования, получает довольно полное представление о своих будущих вложениях и сроках их окупаемости.
+Даже при выполнении монтажа по качественному и профессионально исполненному рабочему проекту на нашем пути встречаются вновь проложенные коммуникации и инженерные сооружения,
+        которые не были возведены или указаны на последней стадии проектирования. Поэтому в процессе выполнения монтажных работ все равно приходится вносить,
+        повторно согласовывать и утверждать новые изменения. Это требует настоящего профессионализма и слаженности от сотрудников компании,
+        занимающейся работами по газификации: проектировщиков, геодезистов, инженеров ПТО, прорабов, слесарей, газоэлектросварщиков.
+Наряду с выбором одного из вариантов размещения котельной: пристроенная, отдельностоящая, крышная, — мы предлагаем несколько решений вопроса отопления комплекса:
+        водо-воздушное, газо-воздушное, инфракрасное, водяное или их комбинации.
+        Мы предоставляем заказчику предварительный расчет первоначальных инвестиционных и последующих эксплуатационных расходов устанавливаемого оборудования:
+        периодичность и стоимость технического обслуживания, расходных материалов, гарантийные сроки и ориентировочную продолжительность службы.
+        Мы стараемся пояснить минусы и плюсы каждого из вариантов, не навязывая свое решение.
+        Заказчик, на стадии выбора отопительного оборудования, получает довольно полное представление о своих будущих вложениях и сроках их окупаемости.
 
         <!-- from unispb -->
 
@@ -148,11 +169,9 @@
         и прочих коммерческих объектов
         в Санкт-Петербурге и Ленинградской области.
 
-        Более 75 ресторанов, кафе уже газифицированы ООО "Универстрой" с 2011 года
         Фиксированные городские цены на проектирование и монтаж
         Бесплатный выезд специалиста для определения точной стоимости работ
 
-        Задайте вопрос специалисту по телефону: +7 (812) 677-03-06
         Мы работаем пн-сб с 9:30 до 18:00.
         В нерабочее время заполните форму обратной связи внизу страницы.
 
@@ -160,8 +179,6 @@
         Вы открываете кафе или ресторан?
         Или уже являетесь его владельцем?
         Требуется выполнить газоснабжение оборудования - водонагревателей, плит, фритюрниц, макароноварок, грилей, wok-печей?
-        Обратитесь к профессионалам – ООО "Универстрой".
-        Специалистами ООО "Универстрой" газифицировано более 75 кафе, ресторанов и малых коммунально-бытовых предприятий!
 
         И сегодня мы уверенно предоставляем услуги по выполнению любого этапа газоснабжения!
         Или же выполняем эти работы "под ключ", что является, как правило, наиболее удобной формой работы как для Вас, так и для нас.
@@ -170,7 +187,6 @@
         Хотите получить предложение по газоснабжению кафе, ресторана?
         Позвоните нам прямо сейчас!
 
-        (812) 677-03-06
         Вам ответит наш специалист.
 
         Каковы Ваши преимущества при работе с нами?
@@ -190,7 +206,6 @@
         А более 75 собственников уже доверили нам подключение газоснабжения в ресторане!
         Хотите получить предложение по газоснабжению кафе, ресторана?
         Позвоните прямо сейчас!
-        (812) 677-03-06
         Вам ответит наш специалист.
         Вам неудобно сейчас звонить?
         Возможно, Вы просто не любите разговаривать по телефону?
@@ -198,7 +213,7 @@
         Просто заполните форму внизу страницы!
 
         Всё работает очень просто: когда Вы нажимаете на кнопку "Заказать звонок",
-        на нашу почту unispb@bk.ru приходит письмо,
+        на нашу почту  приходит письмо,
         в котором указывается то, что Вы написали в трёх строчках этой формы.
 
         Наш сотрудник увидит это письмо, спокойно подготовит ответ и перезвонит Вам!
