--- a/GasificationHome.html
+++ b/GasificationHome.html
@@ -11,7 +11,7 @@
 <body>
 <!-----------------------bootstrap navbar---------------------------->
 <header>
-    <nav class="navbar navbar-expand-lg navbar-dark header">
+    <nav class="navbar navbar-expand-lg navbar-light header">
         <a class="navbar-brand" href="index.html">
             <img src="images/logo.png" alt="logo">
         </a>
@@ -26,14 +26,21 @@
                 <li class="nav-item">
                     <a href="cost.html">
                         <div></div>
-                        <div>КАЛЬКУЛЯТОР <br> СТОИМОСТИ</div>
+                        <div>КАЛЬКУЛЯТОР СТОИМОСТИ</div>
                     </a>
                     <div class="dropdown-divider"></div>
                 </li>
                 <li class="nav-item">
                     <a href="calculation.html">
                         <div></div>
-                        <div>РАСЧЕТЫ <br> ONLINE</div>
+                        <div>РАСЧЕТЫ ONLINE</div>
+                    </a>
+                    <div class="dropdown-divider"></div>
+                </li>
+                <li class="nav-item">
+                    <a href="news.html">
+                        <div></div>
+                        <div>НОВОСТИ</div>
                     </a>
                     <div class="dropdown-divider"></div>
                 </li>
@@ -59,7 +66,7 @@
         <!--кнопка Провести ГАЗ________________________________________________________________________-->
         <div class="form gasForm">
             <form action="#">
-                <button type="button" class="btnfos" text="btn btn-lg bg-danger" data-toggle="modal"
+                <button type="button" class="btnfos" data-toggle="modal"
                         data-target="#exampleModal" data-whatever="@getbootstrap">Провести ГАЗ
                 </button>
             </form>
@@ -105,7 +112,7 @@
         <ul class="navbar-nav flex-column contacts">
             <li>
                 <a href="tel:+78123333333">
-                    <div> +7 (812) 333-33-33</div>
+                    <div> +7&nbsp;(812)&nbsp;333-33-33</div>
                 </a>
                 <div class="dropdown-divider"></div>
             </li>
@@ -115,11 +122,11 @@
                 </a>
                 <div class="dropdown-divider"></div>
             </li>
-            <li>
-                <a href="contacts.html">
-                    <div class="contacts_text"> Санкт-Петербург, ул.<br>Гороховая, д. 33, оф. 15.</div>
-                </a>
-            </li>
+            <!--            <li>-->
+            <!--                <a href="contacts.html">-->
+            <!--                    <div class="contacts_text"> Санкт-Петербург, ул.<br>Гороховая, д. 33, оф. 15.</div>-->
+            <!--                </a>-->
+            <!--            </li>-->
         </ul>
     </nav>
 </header>
@@ -172,8 +179,8 @@ Cтроительство и монтаж газовых систем
         <!--from universtroy-->
         Газоснабжение многоквартирного дома
         Ищете опытного и исполнительного подрядчика по газоснабжению многоквартирного дома?
-        Специалистами ООО "Универстрой" газифицировано в общей сложности более 2700 квартир в многоквартирных жилых домах.
-        ООО "Универстрой" принимает участие в конкурсах, тендерах и запросах предложений на выполнение работ по монтажу газопровода в многоквартирных жилых домах - как по согласованным проектам, так и "под ключ" с получением разрешительной документации и проектированием.
+        Специалистами  газифицировано в общей сложности более 2700 квартир в многоквартирных жилых домах.
+         принимает участие в конкурсах, тендерах и запросах предложений на выполнение работ по монтажу газопровода в многоквартирных жилых домах - как по согласованным проектам, так и "под ключ" с получением разрешительной документации и проектированием.
 
         Работая с надежным подрядчиком, Вы сэкономите время, а также получите гарантированный результат - своевременно подключение природного газа в соответствии с правилами безопасности, а также юридически грамотно оформленную документацию.
         Во собираете предложения по газоснабжению многоквартирного дома?
@@ -218,10 +225,6 @@ Cтроительство и монтаж газовых систем
         Вы можете написать номер в любом формате - наши сотрудники прочитают и разберутся.
         Прямо здесь же Вы можете написать время, удобное для ответа на наш звонок.
 
-        Например:
-        "8 921 777 88 22"
-        Или:
-        "(812) 333-11-00 звонить только с 10 до 15 по вторникам и пятницам"
 
         Проект газоснабжения частного дома
         Что такое проект газоснабжения?
@@ -244,7 +247,7 @@ Cтроительство и монтаж газовых систем
         Поэтому первым этапом газификации Вашего дома является именно получение Технических условий и выполнение проекта.
         Далее проект согласовывается в ГРО "ПетерургГаз", и по нему можно выполнять монтаж.
         Проект газоснабжения может выполняться только специализированной организацией, имеющей Свидетельство о вступлении в СРО и допуск на данный вид проектирования.
-        ООО "Универстрой" имеет все необходимые допуски для проектирования систем газоснабжения.
+        имеет все необходимые допуски для проектирования систем газоснабжения.
 
         Если по существу, то проект газоснабжения нужен:
         - Чтобы правильно выбрать газовое оборудование;
@@ -311,7 +314,7 @@ Cтроительство и монтаж газовых систем
 
         Как уберечь себя от подобных ошибок?
         Как начать пользоваться наиболее удобным, современным, экологичным и выгодным способом отопления?
-        С 1 октября 2013 года ООО "Универстрой" открывает Услугу "Доступная Газификация".
+        С 1 октября 2013 года  открывает Услугу "Доступная Газификация".
         Теперь каждый желающий собственник частного жилого дома или коммерческого объекта в Санкт-Петербурге и Ленинградской области может совершенно бесплатно обратиться на Горячую линию по вопросам газификации по телефону +7 (812) 425-68-54!
 
         Обращаясь на Горячую линию, Вы гарантированно бесплатно можете:
@@ -322,7 +325,7 @@ Cтроительство и монтаж газовых систем
         После этого Вы, оценив все условия, можете заказать газоснабжение по услуге "Доступная газификация".
 
         676
-        Фото: Производятся испытания газопровода, построенного ООО "Универстрой"
+        Фото: Производятся испытания газопровода, построенного
         Что изменилось в порядке подключения газа в 2015 году?
         С 2015 года вступило в силу Постановление Правительства РФ от 30.12.2013 N 1314 "Правила подключения (технологического присоединения) объектов капитального строительства к сетям газораспределения".
         При этом суть процесса подключения частного дома к газопроводу принципиально не изменилась: теперь вместо получения Технических условий на подключение к газопроводу в так называемой газораспределительной организации необходимо заключать Договор технического подключения к газопроводу, приложением к которому являются Технические условия.
