--- a/Wolf_CGG_1K_28.html
+++ b/Wolf_CGG_1K_28.html
@@ -11,7 +11,7 @@
 <body>
 <!--bootstrap navbar________________________________________________________________________-->
 <header>
-    <nav class="navbar navbar-expand-lg navbar-dark header">
+    <nav class="navbar navbar-expand-lg navbar-light header">
         <a class="navbar-brand" href="index.html">
             <img src="images/logo.png" alt="logo">
         </a>
@@ -25,7 +25,7 @@
             <ul class="navbar-nav mr-auto menu">
                 <li class="nav-item">
                     <a href="cost.html">
-                        <div class="menuCalc"></div>
+                        <div></div>
                         <div>КАЛЬКУЛЯТОР СТОИМОСТИ</div>
                     </a>
                     <div class="dropdown-divider"></div>
@@ -34,6 +34,13 @@
                     <a href="calculation.html">
                         <div></div>
                         <div>РАСЧЕТЫ ONLINE</div>
+                    </a>
+                    <div class="dropdown-divider"></div>
+                </li>
+                <li class="nav-item">
+                    <a href="news.html">
+                        <div></div>
+                        <div>НОВОСТИ</div>
                     </a>
                     <div class="dropdown-divider"></div>
                 </li>
@@ -105,7 +112,7 @@
         <ul class="navbar-nav flex-column contacts">
             <li>
                 <a href="tel:+78123333333">
-                    <div> +7 (812) 333-33-33</div>
+                    <div> +7&nbsp;(812)&nbsp;333-33-33</div>
                 </a>
                 <div class="dropdown-divider"></div>
             </li>
@@ -126,35 +133,110 @@
 <div class="container">
     <div class="main">
         <a href="images/wallBoilers/wolf_CGG_1K.jpg" target="_blank">
-            <img height="300" max-width="300" src="images/wallBoilers/wolf_CGG_1K.jpg" alt="WOLF_CGG_1K">
+            <img class="product" src="images/wallBoilers/wolf_CGG_1K.jpg" alt="WOLF_CGG_1K">
         </a>
-            <h2>котел настенный Wolf (Германия)</h2>
-            модель Wolf CGG 1K
-            <h3>Характеристики товара</h3>
-            <p>
-                <ul>
-                    <li>Цена:59 000</li>
-                    <li>Производство    Германия</li>
-                    <li>Гарантия, мес   24</li>
-                    <li>Мощность, кВт   28</li>
-                    <li>Камера сгорания закрытая</li>
-                    <li>Количество контуров 2</li>
-                    <li>Отопление   да</li>
-                    <li>Горячее водоснабжение   да, проточный теплообменник</li>
-                    <li>Производительность ГВС, л/мин   12</li>
-                    <li>Теплоноситель   вода, фирменный антифриз</li>
-                    <li>Высота, мм  855</li>
-                    <li>Ширина, мм  440</li>
-                    <li>Глубина, мм 393</li>
-                    <li>Вес, кг 42</li>
-                    <li>Диаметр дымохода, мм    60/100</li>
-                    <li>Подключение газа, Ду мм 20</li>
-                    <li>Расход газа м3/ч    3,30</li>
-                </ul>
-            </p>
+        <h2>котел настенный Wolf (Германия)</h2>
+        <p>модель Wolf CGG 1K</p>
+        <h3>Характеристики товара:</h3>
+        <button class="buy_btn">Купить</button>
+        <table>
+            <tr>
+                <td>Цена:</td>
+                <td>59 000</td>
+                <td>рублей</td>
+            </tr>
+            <tr>
+                <td>Производство</td>
+                <td>Германия</td>
+                <td>-</td>
+            </tr>
+            <tr>
+                <td>Гарантия</td>
+                <td>24</td>
+                <td>месяца</td>
+            </tr>
+            <tr>
+                <td>Мощность</td>
+                <td>28</td>
+                <td>кВт</td>
+            </tr>
+            <tr>
+                <td>Камера сгорания</td>
+                <td>закрытая</td>
+                <td>-</td>
+            </tr>
+            <tr>
+                <td>Количество контуров</td>
+                <td>2</td>
+                <td>-</td>
+            </tr>
+            <tr>
+                <td>Отопление</td>
+                <td>да</td>
+                <td>-</td>
+            </tr>
+            <tr>
+                <td>Горячее водоснабжение</td>
+                <td>да</td>
+                <td>проточный теплообменник</td>
+            </tr>
+            <tr>
+                <td>Мощность</td>
+                <td>28</td>
+                <td>кВт</td>
+            </tr>
+            <tr>
+                <td>Производительность ГВС</td>
+                <td>12</td>
+                <td>л/мин</td>
+            </tr>
+            <tr>
+                <td>Теплоноситель</td>
+                <td>вода, фирменный антифриз</td>
+                <td>-</td>
+            </tr>
+            <tr>
+                <td>Высота</td>
+                <td>855</td>
+                <td>мм</td>
+            </tr>
+            <tr>
+                <td>Ширина</td>
+                <td>440</td>
+                <td>мм</td>
+            </tr>
+            <tr>
+                <td>Глубина</td>
+                <td>393</td>
+                <td>мм</td>
+            </tr>
+            <tr>
+                <td>Вес</td>
+                <td>42</td>
+                <td>кг</td>
+            </tr>
+            <tr>
+                <td>Диаметр дымохода</td>
+                <td>60/100</td>
+                <td>мм</td>
+            </tr>
+            <tr>
+                <td>Подключение газа, Ду</td>
+                <td>20</td>
+                <td>мм</td>
+            </tr>
+            <tr>
+                <td>Расход газа</td>
+                <td>3,30</td>
+                <td>м3/ч</td>
+            </tr>
+        </table>
             <h3>Подробное описание товара</h3>
             <p>
-               Газовые настенные котлы CGG-1K предназначены для отопления и ГВС в проточном режиме. Автоматическая регулировка напора вентилятора в зависимости от длины дымовой трубы. Вентилятор с плавной регулировкой числа оборотов. Подача воздуха и удаление дыма по концентрическим или раздельным воздуховодам и дымоходам. Котлы WOLF допущены для применения на территории Российской Федерации Разрешением Госгортехнадзора и имеют Сертификат соответствия. 
+               Газовые настенные котлы CGG-1K предназначены для отопления и ГВС в проточном режиме.
+                Автоматическая регулировка напора вентилятора в зависимости от длины дымовой трубы.
+                Вентилятор с плавной регулировкой числа оборотов. Подача воздуха и удаление дыма по концентрическим или раздельным воздуховодам и дымоходам.
+                Котлы WOLF допущены для применения на территории Российской Федерации Разрешением Госгортехнадзора и имеют Сертификат соответствия.
             </p>
             <h4>Преимущества котлов Wolf CGG-1K:</h4>
             <ul>
@@ -184,7 +266,6 @@
                     </ul>
                 </li>
             </ul>
-            </p>
         </div>
     <div class="clearfix"></div>
 </div>
