--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <!--bootstrap navbar________________________________________________________________________-->
 <header>
-    <nav class="navbar navbar-expand-lg navbar-dark header">
+    <nav class="navbar navbar-expand-lg navbar-light header">
         <a class="navbar-brand" href="index.html">
             <img src="images/logo.png" alt="logo">
         </a>
@@ -25,7 +25,7 @@
             <ul class="navbar-nav mr-auto menu">
                 <li class="nav-item">
                     <a href="cost.html">
-                        <div class="menuCalc"></div>
+                        <div></div>
                         <div>КАЛЬКУЛЯТОР СТОИМОСТИ</div>
                     </a>
                     <div class="dropdown-divider"></div>
@@ -34,6 +34,13 @@
                     <a href="calculation.html">
                         <div></div>
                         <div>РАСЧЕТЫ ONLINE</div>
+                    </a>
+                    <div class="dropdown-divider"></div>
+                </li>
+                <li class="nav-item">
+                    <a href="news.html">
+                        <div></div>
+                        <div>НОВОСТИ</div>
                     </a>
                     <div class="dropdown-divider"></div>
                 </li>
@@ -105,7 +112,7 @@
         <ul class="navbar-nav flex-column contacts">
             <li>
                 <a href="tel:+78123333333">
-                    <div> +7 (812) 333-33-33</div>
+                    <div> +7&nbsp;(812)&nbsp;333-33-33</div>
                 </a>
                 <div class="dropdown-divider"></div>
             </li>
@@ -127,7 +134,7 @@
     <div class="container-fluid">
         <!--Виды объектов________________________________________________________________________-->
         <div class="row menu_3">
-            <a href="gasificationFlat.html" class="col-xl-3 col-lg-6 typeBuildingOut">
+            <a href="gasificationFlat.html" class="col-xl-3 col-lg-6 typeObject">
                 <div class="media">
                     <img class="align-self-center mr-3" src="images/flat.png" alt="flat">
                     <div class="media-body">
@@ -135,7 +142,7 @@
                     </div>
                 </div>
             </a>
-            <a href="gasificationHome.html" class="col-xl-3 col-lg-6 typeBuildingOut">
+            <a href="gasificationHome.html" class="col-xl-3 col-lg-6 typeObject">
                 <div class="media">
                     <img class="align-self-center mr-3" src="images/house.png" alt="house">
                     <div class="media-body">
@@ -143,7 +150,7 @@
                     </div>
                 </div>
             </a>
-            <a href="gasificationCommerce.html" class="col-xl-3 col-lg-6 typeBuildingOut">
+            <a href="gasificationCommerce.html" class="col-xl-3 col-lg-6 typeObject">
                 <div class="media">
                     <img class="align-self-center mr-3" src="images/commerce.png" alt="commerce">
                     <div class="media-body">
@@ -151,7 +158,7 @@
                     </div>
                 </div>
             </a>
-            <a href="gasificationIndustry.html" class="col-xl-3 col-lg-6 typeBuildingOut">
+            <a href="gasificationIndustry.html" class="col-xl-3 col-lg-6 typeObject">
                 <div class="media">
                     <img class="align-self-center mr-3" src="images/boilerHouse.png" alt="boilerHouse">
                     <div class="media-body">
@@ -164,8 +171,8 @@
     <div class="container">
         <!--Виды работ________________________________________________________________________-->
         <div class="row">
-            <a href="typeWorkTU.html" class="col-lg-6 col-sm-12 typeWorkOut">
-                <div class="media typeWorkIn">
+            <a href="typeWorkTU.html" class="col-lg-6 col-sm-12 typeActivityOut">
+                <div class="media typeActivityIn">
                     <div class="align-self-center mr-3 squareImg2">
                         <img src="images/peterburgGaz.png" alt="drawing">
                     </div>
@@ -175,8 +182,8 @@
                     </div>
                 </div>
             </a>
-            <a href="typeWorkProject.html" class="col-lg-6 col-sm-12 typeWorkOut">
-                <div class="media typeWorkIn">
+            <a href="typeWorkProject.html" class="col-lg-6 col-sm-12 typeActivityOut">
+                <div class="media typeActivityIn">
                     <div class="align-self-center mr-3 squareImg2">
                         <img src="images/drawing.png" alt="drawing">
                     </div>
@@ -186,8 +193,8 @@
                     </div>
                 </div>
             </a>
-            <a href="typeWorkMounting.html" class="col-lg-6 col-sm-12 typeWorkOut">
-                <div class="media typeWorkIn">
+            <a href="typeWorkMounting.html" class="col-lg-6 col-sm-12 typeActivityOut">
+                <div class="media typeActivityIn">
                     <div class="align-self-center mr-3 squareImg2">
                         <img src="images/welder.png" alt="checkList">
                     </div>
@@ -197,8 +204,8 @@
                     </div>
                 </div>
             </a>
-            <a href="typeWorkChimney.html" class="col-lg-6 col-sm-12 typeWorkOut">
-                <div class="media typeWorkIn">
+            <a href="typeWorkChimney.html" class="col-lg-6 col-sm-12 typeActivityOut">
+                <div class="media typeActivityIn">
                     <div class="align-self-center mr-3 squareImg2">
                         <img src="images/chimney.png" alt="checkList">
                     </div>
@@ -208,8 +215,8 @@
                     </div>
                 </div>
             </a>
-            <a href="typeWorkGasConnect.html" class="col-lg-6 col-sm-12 typeWorkOut">
-                <div class="media typeWorkIn">
+            <a href="typeWorkGasConnect.html" class="col-lg-6 col-sm-12 typeActivityOut">
+                <div class="media typeActivityIn">
                     <div class="align-self-center mr-3 squareImg2">
                         <img src="images/oven.png" alt="checkList">
                     </div>
@@ -219,8 +226,8 @@
                     </div>
                 </div>
             </a>
-            <a href="typeWorkCounting.html" class="col-lg-6 col-sm-12 typeWorkOut">
-                <div class="media typeWorkIn">
+            <a href="typeWorkCounting.html" class="col-lg-6 col-sm-12 typeActivityOut">
+                <div class="media typeActivityIn">
                     <div class="align-self-center mr-3 squareImg2">
                         <img src="images/gazCounter.png" alt="checkList">
                     </div>
@@ -238,7 +245,7 @@
     <div class="clearfix"></div>
     <div class="row">
         <div class="col-xl-3 col-md-6">
-            <h4>Навигация</h4>
+            <h5>Навигация:</h5>
             <ul>
                 <li><a href="#">О нас</a></li>
                 <li><a href="#">Калькулятор стоимости</a></li>
@@ -248,7 +255,7 @@
             </ul>
         </div>
         <div class="col-xl-3 col-md-6">
-            <h4>Виды газифицируемых объектов</h4>
+            <h5>Виды газифицируемых объектов:</h5>
             <ul>
                 <li><a href="#">Газификация частных домов и квартир</a></li>
                 <li><a href="#">Газификация поселков и садоводств</a></li>
@@ -257,7 +264,7 @@
             </ul>
         </div>
         <div class="col-xl-3 col-md-6">
-            <h4>Виды выполняемых рабор</h4>
+            <h5>Виды выполняемых рабор:</h5>
             <ul>
                 <li><a href="#">Получение технических условий</a></li>
                 <li><a href="#">Проектирование</a></li>
