--- a/shop.html
+++ b/shop.html
@@ -11,7 +11,7 @@
 <body>
 <!--bootstrap navbar________________________________________________________________________-->
 <header>
-    <nav class="navbar navbar-expand-lg navbar-dark header">
+    <nav class="navbar navbar-expand-lg navbar-light header">
         <a class="navbar-brand" href="index.html">
             <img src="images/logo.png" alt="logo">
         </a>
@@ -25,7 +25,7 @@
             <ul class="navbar-nav mr-auto menu">
                 <li class="nav-item">
                     <a href="cost.html">
-                        <div class="menuCalc"></div>
+                        <div></div>
                         <div>КАЛЬКУЛЯТОР СТОИМОСТИ</div>
                     </a>
                     <div class="dropdown-divider"></div>
@@ -34,6 +34,13 @@
                     <a href="calculation.html">
                         <div></div>
                         <div>РАСЧЕТЫ ONLINE</div>
+                    </a>
+                    <div class="dropdown-divider"></div>
+                </li>
+                <li class="nav-item">
+                    <a href="news.html">
+                        <div></div>
+                        <div>НОВОСТИ</div>
                     </a>
                     <div class="dropdown-divider"></div>
                 </li>
@@ -105,7 +112,7 @@
         <ul class="navbar-nav flex-column contacts">
             <li>
                 <a href="tel:+78123333333">
-                    <div> +7 (812) 333-33-33</div>
+                    <div> +7&nbsp;(812)&nbsp;333-33-33</div>
                 </a>
                 <div class="dropdown-divider"></div>
             </li>
@@ -126,107 +133,26 @@
 <div class="container">
     <div class="main">
         <h1>Каталог</h1>
-        <a href="images/wallBoilers/wolf_CGG_1K.jpg" target="_blank">
-            <img class="product" src="images/wallBoilers/wolf_CGG_1K.jpg" alt="WOLF_CGG_1K">
-        </a>
-        <h2>котел настенный Wolf (Германия)</h2>
-        модель Wolf CGG 1K
-        <h3>Характеристики товара:</h3>
-        <table style="width:100%">
-            <tr>
-                <td>Цена:</td>
-                <td>59 000</td>
-                <td>рублей</td>
-            </tr>
-            <tr>
-                <td>Производство</td>
-                <td>Германия</td>
-                <td>-</td>
-            </tr>
-            <tr>
-                <td>Гарантия</td>
-                <td>24</td>
-                <td>месяца</td>
-            </tr>
-            <tr>
-                <td>Мощность</td>
-                <td>28</td>
-                <td>кВт</td>
-            </tr>
-            <tr>
-                <td>Камера сгорания</td>
-                <td>закрытая</td>
-                <td>-</td>
-            </tr>
-            <tr>
-                <td>Количество контуров</td>
-                <td>2</td>
-                <td>-</td>
-            </tr>
-            <tr>
-                <td>Отопление</td>
-                <td>да</td>
-                <td>-</td>
-            </tr>
-            <tr>
-                <td>Горячее водоснабжение</td>
-                <td>да</td>
-                <td>проточный теплообменник</td>
-            </tr>
-            <tr>
-                <td>Мощность</td>
-                <td>28</td>
-                <td>кВт</td>
-            </tr>
-            <tr>
-                <td>Производительность ГВС</td>
-                <td>12</td>
-                <td>л/мин</td>
-            </tr>
-            <tr>
-                <td>Теплоноситель</td>
-                <td>вода, фирменный антифриз</td>
-                <td>-</td>
-            </tr>
-            <tr>
-                <td>Высота</td>
-                <td>855</td>
-                <td>мм</td>
-            </tr>
-            <tr>
-                <td>Ширина</td>
-                <td>440</td>
-                <td>мм</td>
-            </tr>
-            <tr>
-                <td>Глубина</td>
-                <td>393</td>
-                <td>мм</td>
-            </tr>
-            <tr>
-                <td>Вес</td>
-                <td>42</td>
-                <td>кг</td>
-            </tr>
-            <tr>
-                <td>Диаметр дымохода</td>
-                <td>60/100</td>
-                <td>мм</td>
-            </tr>
-            <tr>
-                <td>Подключение газа, Ду</td>
-                <td>20</td>
-                <td>мм</td>
-            </tr>
-            <tr>
-                <td>Расход газа</td>
-                <td>3,30</td>
-                <td>м3/ч</td>
-            </tr>
-        </table>
-        <a href="Wolf_CGG_1K_28.html">
-            <p>Подробное описание товара</p>
-        </a>
+        <div class="products">
+            <h4>котел настенный Wolf (Германия)</h4>
+            <a href="images/wallBoilers/wolf_CGG_1K.jpg" target="_blank">
+                <img class="product_img" src="images/wallBoilers/wolf_CGG_1K.jpg" alt="WOLF_CGG_1K">
+            </a>
+            <p>модель Wolf CGG-1K-28</p>
+            <a href="Wolf_CGG_1K_28.html">
+                <p>Подробное описание товара</p>
+            </a>
+        </div>
+        <div class="products">
+            <h4>котел настенный Wolf (Германия)</h4>
+            <a href="images/wallBoilers/wolf_CGG_1K.jpg" target="_blank">
+                <img class="product_img" src="images/wallBoilers/wolf_CGG_1K.jpg" alt="WOLF_CGG_1K">
+            </a>
+            <p>модель Wolf CGG-1K-24</p>
+            <a href="Wolf_CGG_1K_24.html">
+                <p>Подробное описание товара</p>
+            </a>
+        </div>
     </div>
 </div>
 <footer>
