--- a/wolf_CGG_1K_24.html
+++ b/wolf_CGG_1K_24.html
@@ -130,10 +130,146 @@
         </ul>
     </nav>
 </header>
-<div class="main">
-    <div class="container">
-        <h1>Расчеты</h1>
+<div class="container">
+    <div class="main">
+        <a href="images/wallBoilers/wolf_CGG_1K.jpg" target="_blank">
+            <img class="product" src="images/wallBoilers/wolf_CGG_1K.jpg" alt="WOLF_CGG_1K">
+        </a>
+        <h2>котел настенный Wolf (Германия)</h2>
+        <p>модель Wolf CGG 1K</p>
+        <button class="buy_btn">Купить</button>
+        <h3>Характеристики товара:</h3>
+        <table>
+            <tr>
+                <td>Цена:</td>
+                <td>59 000</td>
+                <td>рублей</td>
+            </tr>
+            <tr>
+                <td>Производство</td>
+                <td>Германия</td>
+                <td>-</td>
+            </tr>
+            <tr>
+                <td>Гарантия</td>
+                <td>24</td>
+                <td>месяца</td>
+            </tr>
+            <tr>
+                <td>Мощность</td>
+                <td>24</td>
+                <td>кВт</td>
+            </tr>
+            <tr>
+                <td>Камера сгорания</td>
+                <td>закрытая</td>
+                <td>-</td>
+            </tr>
+            <tr>
+                <td>Количество контуров</td>
+                <td>2</td>
+                <td>-</td>
+            </tr>
+            <tr>
+                <td>Отопление</td>
+                <td>да</td>
+                <td>-</td>
+            </tr>
+            <tr>
+                <td>Горячее водоснабжение</td>
+                <td>да</td>
+                <td>проточный теплообменник</td>
+            </tr>
+            <tr>
+                <td>Мощность</td>
+                <td>28</td>
+                <td>кВт</td>
+            </tr>
+            <tr>
+                <td>Производительность ГВС</td>
+                <td>12</td>
+                <td>л/мин</td>
+            </tr>
+            <tr>
+                <td>Теплоноситель</td>
+                <td>вода, фирменный антифриз</td>
+                <td>-</td>
+            </tr>
+            <tr>
+                <td>Высота</td>
+                <td>855</td>
+                <td>мм</td>
+            </tr>
+            <tr>
+                <td>Ширина</td>
+                <td>440</td>
+                <td>мм</td>
+            </tr>
+            <tr>
+                <td>Глубина</td>
+                <td>393</td>
+                <td>мм</td>
+            </tr>
+            <tr>
+                <td>Вес</td>
+                <td>40</td>
+                <td>кг</td>
+            </tr>
+            <tr>
+                <td>Диаметр дымохода</td>
+                <td>60/100</td>
+                <td>мм</td>
+            </tr>
+            <tr>
+                <td>Подключение газа, Ду</td>
+                <td>20</td>
+                <td>мм</td>
+            </tr>
+            <tr>
+                <td>Расход газа</td>
+                <td>2,8</td>
+                <td>м3/ч</td>
+            </tr>
+        </table>
+        <h3>Подробное описание товара</h3>
+        <p>
+            Газовые настенные котлы CGG-1K предназначены для отопления и ГВС в проточном режиме.
+            Автоматическая регулировка напора вентилятора в зависимости от длины дымовой трубы.
+            Вентилятор с плавной регулировкой числа оборотов. Подача воздуха и удаление дыма по концентрическим или
+            раздельным воздуховодам и дымоходам.
+            Котлы WOLF допущены для применения на территории Российской Федерации Разрешением Госгортехнадзора и имеют
+            Сертификат соответствия.
+        </p>
+        <h4>Преимущества котлов Wolf CGG-1K:</h4>
+        <ul>
+            <li>надежная конструкция</li>
+            <li>высокий КПД</li>
+            <li>простота и удобство монтажа и сервиса при монтаже котла</li>
+            <li>не требуется оставлять свободное расстояние до боковой стены</li>
+            <li>быстрая и простая диагностика</li>
+            <li>эксплуатация котла на природном или сжиженном газе</li>
+            <li>простое управление</li>
+            <li>легкий доступ к блокам и деталям</li>
+            <li>функция быстрого старта ГВС</li>
+            <li>подача воздуха для горения из атмосферы (закрытая камера)</li>
+            <li>подача воздуха из помещения(открытая камера)</li>
+            <li>функция мягкого старта</li>
+            <li>небольшой вес</li>
+            <li>
+                <h5>Высококачественные компоненты котла:</h5>
+                <ul>
+                    <li>насос Grundfos</li>
+                    <li>гидравлический блок Grundfos</li>
+                    <li>вентилятор Fime/EBM</li>
+                    <li>комбинированный газовый клапан SIT</li>
+                    <li>устройство регулирования SIT</li>
+                    <li>горелка Worgas</li>
+                    <li>пластинчатый теплообменник ГВС из нержавеющей стали</li>
+                </ul>
+            </li>
+        </ul>
     </div>
+    <div class="clearfix"></div>
 </div>
 <footer>
     <div class="clearfix"></div>
