--- a/contacts.html
+++ b/contacts.html
@@ -11,7 +11,7 @@
 <body>
 <!--bootstrap navbar________________________________________________________________________-->
 <header>
-    <nav class="navbar navbar-expand-lg navbar-dark header">
+    <nav class="navbar navbar-expand-lg navbar-light header">
         <a class="navbar-brand" href="index.html">
             <img src="images/logo.png" alt="logo">
         </a>
@@ -25,7 +25,7 @@
             <ul class="navbar-nav mr-auto menu">
                 <li class="nav-item">
                     <a href="cost.html">
-                        <div class="menuCalc"></div>
+                        <div></div>
                         <div>КАЛЬКУЛЯТОР СТОИМОСТИ</div>
                     </a>
                     <div class="dropdown-divider"></div>
@@ -34,6 +34,13 @@
                     <a href="calculation.html">
                         <div></div>
                         <div>РАСЧЕТЫ ONLINE</div>
+                    </a>
+                    <div class="dropdown-divider"></div>
+                </li>
+                <li class="nav-item">
+                    <a href="news.html">
+                        <div></div>
+                        <div>НОВОСТИ</div>
                     </a>
                     <div class="dropdown-divider"></div>
                 </li>
@@ -105,7 +112,7 @@
         <ul class="navbar-nav flex-column contacts">
             <li>
                 <a href="tel:+78123333333">
-                    <div> +7 (812) 333-33-33</div>
+                    <div> +7&nbsp;(812)&nbsp;333-33-33</div>
                 </a>
                 <div class="dropdown-divider"></div>
             </li>
@@ -158,7 +165,7 @@
             </div>
         </div>
         <h3>Карта</h3>
-        <iframe width="700" height="500" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
+        <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
                 src="http://www.openstreetmap.org/export/embed.html?bbox=30.348873138427738%2C59.803202998849926%2C30.398440361022953%2C59.812591239130754&amp;layer=mapnik&amp;marker=59.807897449481715%2C30.373656749725342"
                 style="border: 1px solid black">
         </iframe>
