--- a/news.html
+++ b/news.html
@@ -132,7 +132,7 @@
 </header>
 <div class="main">
     <div class="container">
-        <h1>Расчеты</h1>
+        <h1>Новости</h1>
     </div>
 </div>
 <footer>
