--- a/typeWorkTU.html
+++ b/typeWorkTU.html
@@ -11,7 +11,7 @@
 <body>
 <!-----------------------bootstrap navbar---------------------------->
 <header>
-    <nav class="navbar navbar-expand-lg navbar-dark header">
+    <nav class="navbar navbar-expand-lg navbar-light header">
         <a class="navbar-brand" href="index.html">
             <img src="images/logo.png" alt="logo">
         </a>
@@ -26,14 +26,21 @@
                 <li class="nav-item">
                     <a href="cost.html">
                         <div></div>
-                        <div>КАЛЬКУЛЯТОР <br> СТОИМОСТИ</div>
+                        <div>КАЛЬКУЛЯТОР СТОИМОСТИ</div>
                     </a>
                     <div class="dropdown-divider"></div>
                 </li>
                 <li class="nav-item">
                     <a href="calculation.html">
                         <div></div>
-                        <div>РАСЧЕТЫ <br> ONLINE</div>
+                        <div>РАСЧЕТЫ ONLINE</div>
+                    </a>
+                    <div class="dropdown-divider"></div>
+                </li>
+                <li class="nav-item">
+                    <a href="news.html">
+                        <div></div>
+                        <div>НОВОСТИ</div>
                     </a>
                     <div class="dropdown-divider"></div>
                 </li>
@@ -59,7 +66,7 @@
         <!--кнопка Провести ГАЗ________________________________________________________________________-->
         <div class="form gasForm">
             <form action="#">
-                <button type="button" class="btnfos" text="btn btn-lg bg-danger" data-toggle="modal"
+                <button type="button" class="btnfos" data-toggle="modal"
                         data-target="#exampleModal" data-whatever="@getbootstrap">Провести ГАЗ
                 </button>
             </form>
@@ -105,7 +112,7 @@
         <ul class="navbar-nav flex-column contacts">
             <li>
                 <a href="tel:+78123333333">
-                    <div> +7 (812) 333-33-33</div>
+                    <div> +7&nbsp;(812)&nbsp;333-33-33</div>
                 </a>
                 <div class="dropdown-divider"></div>
             </li>
@@ -115,11 +122,11 @@
                 </a>
                 <div class="dropdown-divider"></div>
             </li>
-            <li>
-                <a href="contacts.html">
-                    <div class="contacts_text"> Санкт-Петербург, ул.<br>Гороховая, д. 33, оф. 15.</div>
-                </a>
-            </li>
+            <!--            <li>-->
+            <!--                <a href="contacts.html">-->
+            <!--                    <div class="contacts_text"> Санкт-Петербург, ул.<br>Гороховая, д. 33, оф. 15.</div>-->
+            <!--                </a>-->
+            <!--            </li>-->
         </ul>
     </nav>
 </header>
